deployment/vaxproxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaxproxy
  labels:
    app: vaxproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaxproxy
  template:
    metadata:
      labels:
        app: vaxproxy
    spec:
      containers:
      - name: vaxproxy
        image: vaxproxy
        imagePullPolicy: Always
        resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "256Mi"
#      nodeSelector:
#        cloud.google.com/gke-nodepool: non-vespa
