deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vaxproxy-service
  labels:
    app: vaxproxy
spec:
  type: NodePort
  selector:
    app: vaxproxy
  ports:
    - name: vaxproxy
      port: 80
      targetPort: 5000
      protocol: TCP
