deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaxproxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - medicare.whatsbeef.net
    secretName: vaxproxy-tls
  rules:
  - host: medicare.whatsbeef.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vaxproxy-service
            port:
              number: 80
